--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Waillian</title>
+    <title>Waillian-K</title>
 </head>
 <body>
     <h1>Hello World</h1>
     <h2>My Name is Waillian Chit</h2>
     <h3>I live in Yangon</h3>
+    <a href="https://waillian-k.github.io/HTML/">
+        <button>HTML Intro</button>
+    </a>
+    <a href="https://waillian-k.github.io/Web Template/">
+        <button>Web Template</button>
+    </a>
 </body>
 </html>
