--- a/HTML/intro.html
+++ b/HTML/intro.html
@@ -18,5 +18,38 @@
          <div>
             <span>Hello</span>
          </div>
+
+         <!-- attribute  -->
+          <p align="right">This is first paragraph</p>
+          <p align="center">This is second paragraph</p>
+          <p align="left">This is third paragraph</p>
+
+        <!-- Global Attribute - class & id -->
+         <p class="p-tag webdev php">Start Web Development with PHP(Bootstrap + Laraval)</p>
+         <p id="p-id">Hein Learn - Learn everywhere.</p>
+         <p class="p-tag" id="welcome" align="center">Welcome to my class</p>
+
+        <h1>
+            Case Insensitive
+        </h1>
+        <p>Hello    to        my                 student
+            Welcome             to             my            class
+        </p> 
+
+        <div><span><p><h2>Pretty important</h2></p></span></div>
+
+        <!-- Nested tags -->
+         <div>
+            <span>
+                <p>Nested Tags</p>
+                <p>Pretty Important</p>
+                <span>
+                    <h2>Hello</h2>
+                </span>
+            </span>
+         </div>
+
+         
+        
     </body>
 </html>
