--- a/HTML/head.html
+++ b/HTML/head.html
@@ -2,6 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+    <!-- Responsive Web Design -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO - Search Engine Optimization -->
+    <meta name="description" content="Join our top-rated web development training school and master HTML, CSS, JavaScript, and PHP. Learn web development with hands-on projects, expert guidance, and career-focused courses. Start your journey to becoming a professional web developer today!">
+
+    <!-- Keywords for SEO -->
+    <meta name="keywords" content="web development training, learn web development, web development school, HTML courses, CSS training, JavaScript tutorials, PHP classes, beginner web development, advanced web development, front-end development, back-end development, responsive web design, online web development courses, web developer certification, web design training, coding for beginners, career in web development">
+
+    <!-- Robots -->
+    <meta name="robots" content="index, nofollow">
+
+    <!-- Author -->
+    <meta name="author" content="Waillian Chit">
+
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="styles.css">
+
+    <!-- JavaScript -->
+    <script src="scripts.js"></script>
+    
     <title>Head Tag Lesson</title>
 </head>
 <body>
