--- a/HTML/head.html
+++ b/HTML/head.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
+
+    <!-- Character Encoding -->
     <meta charset="UTF-8">
 
     <!-- Responsive Web Design -->
@@ -21,8 +25,33 @@
     <!-- Favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-    <!-- CSS -->
+    <!-- External CSS -->
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Internal CSS -->
+    <style>
+        /* selector {
+            poperties:value:
+            } */
+        h1{
+            color: red;
+        }
+
+        .tag-line {
+            color: azure;
+            background-color: black;
+        }
+
+        #welcome {
+            color: brown;
+            background-color: aquamarine;
+
+        }
+    </style>
+
+    <script>
+        alert("Welcome to My Website");
+    </script>
 
     <!-- JavaScript -->
     <script src="scripts.js"></script>
@@ -30,6 +59,10 @@
     <title>Head Tag Lesson</title>
 </head>
 <body>
-    
+    <h1>Hein learn</h1>
+    <h3 class="tag-line">Learn everywhere</h3>
+    <h3 id="welcome">Welcome to Hein Learn</h3>
+    <p>Start web development with PHP Batch-4 </p>
+
 </body>
 </html>
