--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
     <h1>Hello World</h1>
     <h2>My Name is Waillian Chit</h2>
     <h3>I live in Yangon</h3>
+
+    <a href="intro.html" style="display: block;" target="_blank">intro lesson</a>
+    <a href="index.html" style="display: block;" target="_blank">HTML</a>
+    <a href="head.html" style="display: flex;" target="_blank">head tag lesson</a>
+    <a href="body.html" style="display: contents;" target="_blank">body lesson</a>
+    <a href="index.html" style="display: contents;" target="_blank">index lesson</a>
+
 </body>
 </html>
