--- a/HTML/body.html
+++ b/HTML/body.html
@@ -95,5 +95,7 @@
         <a href="https://www.google.com" style="display: block;" target="_blank">Google</a>
         <a href="https://www.youtube.com" target="_blank">YouTube</a>
 
+        <img src="html.jpg" alt="">
+
 </body>
 </html>
