--- a/HTML/link/pages/Service.html
+++ b/HTML/link/pages/Service.html
@@ -9,8 +9,8 @@
     <nav align="right">
         <a href="../index.html">Home</a> |
         <a href="Service.html">Service</a> |
-        <a href="../pages/Contact.html">Contact</a> |
-        <a href="../pages/About.html">About</a> |
+        <a href="Contact.html">Contact</a> |
+        <a href="About.html">About</a> |
     </nav>
     <hr>
     <header>
