--- a/HTML/link/index.html
+++ b/HTML/link/index.html
@@ -8,9 +8,9 @@
 <body>
     <nav align="right">
         <a href="index.html">Home</a> |
-        <a href="../link/pages/Service.html">Service</a> |
-        <a href="../link/pages/Contact.html">Contact</a> |
-        <a href="../link/pages/About.html">About</a> |
+        <a href="pages/Service.html">Service</a> |
+        <a href="pages/Contact.html">Contact</a> |
+        <a href="pages/About.html">About</a> |
     </nav>
     <hr>
     <header>
