--- a/HTML/link/pages/About.html
+++ b/HTML/link/pages/About.html
@@ -8,8 +8,8 @@
 <body>
     <nav align="right">
         <a href="../index.html">Home</a> |
-        <a href="../pages/Service.html">Service</a> |
-        <a href="../pages/Contact.html">Contact</a> |
+        <a href="Service.html">Service</a> |
+        <a href="Contact.html">Contact</a> |
         <a href="About.html">About</a> |
     </nav>
     <hr>
