--- a/HTML/link/pages/Contact.html
+++ b/HTML/link/pages/Contact.html
@@ -8,9 +8,9 @@
 <body>
     <nav align="right">
         <a href="../index.html">Home</a> |
-        <a href="../pages/Service.html">Service</a> |
+        <a href="Service.html">Service</a> |
         <a href="Contact.html">Contact</a> |
-        <a href="../pages/About.html">About</a> |
+        <a href="About.html">About</a> |
     </nav>
     <hr>
     <header>
