--- a/HTML/form.html
+++ b/HTML/form.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1>Student Registration Form</h1>
-    <p>Please fill in the form below:</p>
+    <p style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Please fill in the form below:</p>
     <hr>
     <!-- method - get & post -->
-    <form action="request.php" method="get">
+    <form action="request.php" method="get" style="font-family: Verdana, Geneva, Tahoma, sans-serif;">
         <label for="name">Name:</label>
         <input type="text" name="student_name" id="name">
         <br>
@@ -28,6 +28,45 @@
         <br>
         <label for="passport">Passport Image:</label>
         <input type="file" accept=".png,.jpg" name="student_passport" id="passport">
+        <br>
+        <select name="student_year" id="year">
+            <option value="1">First Year</option>
+            <option value="2">Second Year</option>
+            <option value="3">Third Year</option>
+            <option value="4">Fourth Year</option>
+        </select>
+        <br>
+        <input type="radio" name="gender" id="male" value="Male">
+        <label for="male">Male</label>
+        <input type="radio" name="gender" id="female" value="female">
+        <label for="female">Female</label>
+        <br>
+        <input type="checkbox" name="travelling" id="travelling" value="travelling">
+        <label for="travelling">Travelling</label>
+        <input type="checkbox" name="reading" id="reading" value="reading">
+        <label for="reading">Reading</label>
+        <input type="checkbox" name="cooking" id="cooking" value="cooking">
+        <label for="cooking">Cooking</label>
+        <br>
+        <label for="address">Address:</label>
+        <textarea name="student_address" id="address" cols="30" rows="10"></textarea>
+        <br>
+        <input type="text" name="" id="" required value="32">
+        <input type="text" name="" id="" readonly value="32">
+        <input type="text" name="" id="" disabled value="32">
+        <br>
+        <input type="email" name="" id="" placeholder="example@email.com">
+        <br>
+        <input type="time" name="" id="">
+        <input type="week" name="" id="">
+        <input type="month" name="" id="">
+        <input type="datetime-local" name="" id="">   
+        <input type="color" name="" id="">
+        <input type="range" name="" id="">
+        <input type="search" name="" id="">
+        <input type="tel" name="" id="">
+        <input type="url" name="" id="">
+        <input type="hidden" name="" id="">
         <br>
         <button type="submit">Save</button>
     </form>
