--- a/CSS/external.html
+++ b/CSS/external.html
@@ -10,5 +10,8 @@
     <h1>External CSS Style</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam iusto excepturi et quae, minima, recusandae officiis expedita inventore quaerat odio atque nobis repellendus qui, tenetur provident esse consequatur ea beatae.</p>
     <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo illo quis recusandae quasi deserunt possimus culpa excepturi sint nam aperiam repellendus exercitationem alias fugiat mollitia eum quo esse, quaerat sapiente!</small>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, provident hic, suscipit asperiores tenetur similique voluptatem possimus pariatur necessitatibus repellendus beatae quam nobis, aliquid atque. Nobis, modi. Doloribus, ducimus dolore.</p>
+
 </body>
 </html>
