--- a/HTML/idol/MoviesList.html
+++ b/HTML/idol/MoviesList.html
@@ -6,13 +6,12 @@
     <title>MoviesLists</title>
 </head>
 <body>
-    <aside>
+    <aside align="right">
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="MoviesList.html">Movies Lists</a></li>
-                <li><a href="login.html">Login</a></li>
-            </ul>
+            <a href="index.html">Home |</a>
+            <a href="MoviesList.html">Movies Lists |</a>
+            <a href="login.html">Login |</a>
+            <hr>
         </nav>
     </aside>
     <hr>
