--- a/HTML/idol/index.html
+++ b/HTML/idol/index.html
@@ -6,13 +6,12 @@
     <title>Home</title>
 </head>
 <body>
-    <aside>
+    <aside align="right">
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="MoviesList.html">Movies Lists</a></li>
-                <li><a href="login.html">Login</a></li>
-            </ul>
+            <a href="index.html">Home |</a>
+            <a href="MoviesList.html">Movies Lists |</a>
+            <a href="login.html">Login |</a>
+            <hr>
         </nav>
     </aside>
     <hr>
@@ -38,7 +37,7 @@
             </tr>
             <tr>
                 <td>Years active</td>
-                <td>- 1977–present</td>
+                <td>- 1977-present</td>
             </tr>
             <tr>
                 <td>Spouse(s)</td>
