--- a/wizora/faq.html
+++ b/wizora/faq.html
@@ -49,7 +49,7 @@
                     <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
                 </li>
                 <li>
-                    <a href=""><i class="fa-solid fa-user"></i></a>
+                    <a href="register.html"><i class="fa-solid fa-user"></i></a>
                 </li>
                 <li><a href="faq.html">FAQs</a></li>
             </ul>
