--- a/JAVA_SCRIPT/intro.html
+++ b/JAVA_SCRIPT/intro.html
@@ -9,10 +9,16 @@
     
     <h1>Hello Bootcamper</h1>
     <p>
-       environment setup
-       syntax
-       
-
+        Environment setup
+        Syntax
+        Keywrds
+        DataTypes
+        Variable
+        Operators
+        Array
+        Condition
+        Looping
+        Function
     </p>
 </body>
 </html>
