--- a/JAVA_SCRIPT/syntax.html
+++ b/JAVA_SCRIPT/syntax.html
@@ -11,14 +11,17 @@
     <script>
         // alert("Hello World");
 
-        // syntax
-        // var name="Waillian";
-        // document.write(name);
-        // console.log(name);
+        //syntax
+        var result = "Waillian"
 
-        var result = 1 + 1;
-        document.write(result);
-        console.log(result);
+        var result=1+2;
+
+        document.write(name); //on document 
+        console.log(name); //on console 
+
+
+
+
 
 
 
