--- a/digitalClockAssignment/index.html
+++ b/digitalClockAssignment/index.html
@@ -9,12 +9,12 @@
 <body>
     <div class="clock">
         <div class="time">
-            <span class="hour">00</span>
+            <span class="hour"></span>
             <span class="dot">:</span>
-            <span class="minute">00</span>
+            <span class="minute"></span>
             <span class="dot">:</span>
-            <span class="second">00</span>
-            <span class="period">AM/PM</span>
+            <span class="second"></span>
+            <span class="period"></span>
         </div>
         <div class="calendar">
             <span class="day-name">Sunday</span>
