--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <a href="body.html" style="display: contents;" target="_blank">body lesson</a>
     <a href="index.html" style="display: contents;" target="_blank">index lesson</a>
 
+    <a href="jQuery/animate.html">jQuery</a>
+
     <p>
         <ul>
             <li>Library</li>
